fixed resizing issue for store on mobil and fixed button realignment

--- a/css/style1.css
+++ b/css/style1.css
@@ -327,7 +327,6 @@ list-style-type: none;
 .store .row { 
 margin: 0 auto;
 max-width: 1250px; 
-min-width: 500px;
 } 
 
 /* cart boxes */ 
@@ -469,6 +468,9 @@ width: 100%;
 margin-bottom: 5px; 
 }
 
+#btn-setting{ 
+  margin-left: 50%; 
+}
 
 @media screen and (max-width: 600px) {
 .topnav a:not(:first-child) {display: none;}
@@ -484,6 +486,18 @@ margin-bottom: 5px;
 a{ 
   max-width: 100%;
 }
+
+#btn-setting{ 
+  margin-left: 0; 
+}
+
+
+
+.col-sm-4{ 
+  padding-top: 10px; 
+}
+
+
 }
 
 
